# horreum

./: .env  Cargo.toml  LICENSE  README.md  Rocket.toml
migrations/2021-06-12-033739_create_tables/: down.sql  up.sql
migrations/2021-06-12-040303_create_type_table/: down.sql  up.sql
migrations/2022-04-30-033213_create_tables/: down.sql  up.sql
schema/: horreum-storehouse.schema.json
src/: main.rs  schema.rs
