[package]
name = "horreum"
version = "0.1.0"
authors = ["Adam N. Morris <adam@kernelpanicstudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"
